--- a/app/src/main/res/layout/activity_new_profile.xml
+++ b/app/src/main/res/layout/activity_new_profile.xml
@@ -7,6 +7,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/data_pers"
         tools:context=".NewProfile"
         android:layout_gravity="center_horizontal"
         android:orientation="vertical">
@@ -14,8 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tv_np_intro"
-            android:textSize="25dp"
+            android:background="@drawable/persdata"
             android:textAlignment="center"
             android:paddingHorizontal="20dp"
             android:layout_gravity="center_horizontal"
@@ -26,55 +26,80 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_gravity="center_horizontal"
             android:ems="10"
-            android:textSize="20dp"
-            android:hint="@string/et_name"
-            android:layout_gravity="center_horizontal">
-        </EditText>
+            android:hint="Name"
+            android:textColorHint="@color/white"
+            android:textSize="20dp"></EditText>
 
         <EditText
             android:id="@+id/surname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_gravity="center_horizontal"
             android:ems="10"
-            android:textSize="20dp"
-            android:hint="@string/et_surname"
-            android:layout_gravity="center_horizontal">
-        </EditText>
+            android:hint="Surname"
+            android:textColorHint="@color/white"
+            android:textSize="20dp"></EditText>
+        <EditText
+            android:id="@+id/age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:ems="10"
+            android:hint="Age"
+            android:textColorHint="@color/white"
+            android:textSize="20dp"></EditText>
+        <EditText
+            android:id="@+id/job"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:ems="10"
+            android:hint="Job"
+            android:textColorHint="@color/white"
+            android:textSize="20dp"></EditText>
+        <EditText
+            android:id="@+id/birthplace"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:ems="10"
+            android:hint="Birth place"
+            android:textColorHint="@color/white"
+            android:textSize="20dp"></EditText>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
             android:textSize="20dp"
-            android:text="@string/tv_birthday">
+            android:textColor="@color/white"
+            android:text="Birthday"
+            >
         </TextView>
 
         <!--https://www.tutlane.com/tutorial/android/android-datepicker-with-examples-->
+
         <DatePicker
             android:id="@+id/birthday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="274dp"
+            android:layout_height="199dp"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="30dp"
-            android:datePickerMode="spinner"
             android:calendarViewShown="false"
             android:clickable="false"
             android:cursorVisible="false"
+            android:datePickerMode="spinner"
             android:focusable="false"
-            android:focusableInTouchMode="false">
+            android:focusableInTouchMode="false"
+            android:background="#F5F5F5">
         </DatePicker>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btt_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/btt_create"
-            android:textSize="15dp">
-        </Button>
+            android:background="@drawable/bt_inv" />
     </LinearLayout>
 </ScrollView>
