--- a/app/src/main/res/layout/activity_new_profile.xml
+++ b/app/src/main/res/layout/activity_new_profile.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
@@ -71,21 +73,37 @@
             >
         </TextView>
 
-        <!--https://www.tutlane.com/tutorial/android/android-datepicker-with-examples-->
-
-        <DatePicker
-            android:id="@+id/birthday"
-            android:layout_width="274dp"
-            android:layout_height="199dp"
+        <TextView
+            android:id="@+id/dateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:calendarViewShown="false"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:datePickerMode="spinner"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:background="#F5F5F5">
-        </DatePicker>
+            android:text="DateTextView"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textColor="#C0C6D1"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/timeButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dateButton" />
+
+        <Button
+            android:id="@+id/dateButton"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="129dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:shadowColor="#130F0F"
+            android:text="Get Date"
+            app:layout_constraintBottom_toTopOf="@+id/dateTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:rippleColor="#FFFEFE" />
+
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btt_start"
