--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,19 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/logo"
         android:layout_gravity="center_horizontal"
         android:paddingTop="100dp"
-        />
+        app:srcCompat="@drawable/logo" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/btt_start"
-        android:layout_width="wrap_content"
+        android:layout_width="149dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/bt_iniz"
-        android:paddingTop="100dp" />
+        android:background="@drawable/rounded_corner"
+        android:text="Inzia quiz"
+        android:textColor="@color/purple_700"
+        app:backgroundTint="@color/whiteblue"
+        android:layout_marginTop="50dp"
+        />
 </LinearLayout>
