--- a/app/src/main/res/layout/activity_new_profile.xml
+++ b/app/src/main/res/layout/activity_new_profile.xml
@@ -5,8 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/data_pers"
@@ -105,11 +104,15 @@
             app:rippleColor="#FFFEFE" />
 
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/btt_start"
-            android:layout_width="wrap_content"
+            android:layout_width="172dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/bt_inv" />
+            android:background="@drawable/rounded_corner"
+            android:text="Invia"
+            android:layout_marginTop="50dp"
+            android:textColor="@color/purple_700"
+            app:backgroundTint="@color/whiteblue" />
     </LinearLayout>
 </ScrollView>
