--- a/app/src/main/res/layout/activity_qt.xml
+++ b/app/src/main/res/layout/activity_qt.xml
@@ -23,6 +23,7 @@
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="0dp"
         android:src="@drawable/object_1"
         android:visibility="gone"/>
 
@@ -31,6 +32,7 @@
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="0dp"
         android:src="@drawable/object_2"
         android:visibility="gone"/>
 
@@ -39,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="65dp"
         android:background="@drawable/microfono_btsu"
         android:paddingTop="90dp"
         android:onClick="btnRecordPressed"
