--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -8,23 +8,24 @@
     android:background="@drawable/sfondoris"
     tools:context=".Report">
 
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="30dp"
         android:text="Report Finale"
         android:textAlignment="center"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/white"
         android:textSize="30dp" />
-
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:text="Numero di risposte corrette:"
+        android:textColor="@color/purple_700"
         android:textAlignment="center"
         android:textSize="20dp"></TextView>
 
@@ -38,13 +39,14 @@
         android:text="@string/question"
         android:textAlignment="center"
         android:textColor="@color/green"
-        android:textSize="12dp"></TextView>
+        android:textSize="16dp"></TextView>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Numero di risposte sbagliate:"
+        android:textColor="@color/purple_700"
         android:textAlignment="center"
         android:textSize="20dp"></TextView>
 
@@ -58,13 +60,14 @@
         android:text="@string/question"
         android:textAlignment="center"
         android:textColor="@color/red"
-        android:textSize="12dp"></TextView>
+        android:textSize="16dp"></TextView>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Numero di risposte in italiano:"
+        android:textColor="@color/purple_700"
         android:textAlignment="center"
         android:textSize="20dp"></TextView>
 
@@ -76,7 +79,7 @@
         android:layout_marginVertical="20dp"
         android:paddingHorizontal="20dp"
         android:text="@string/question"
-        android:textSize="12dp"
+        android:textSize="16dp"
         android:textColor="@color/bluchiaro"
         android:textAlignment="center"></TextView>
 
@@ -85,6 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Numero di risposte in francese:"
+        android:textColor="@color/purple_700"
         android:textAlignment="center"
         android:textSize="20dp"></TextView>
 
@@ -96,7 +100,7 @@
         android:layout_marginVertical="20dp"
         android:paddingHorizontal="20dp"
         android:text="@string/question"
-        android:textSize="12dp"
+        android:textSize="16dp"
         android:textColor="@color/bluchiaro"
         android:textAlignment="center"></TextView>
 
@@ -105,6 +109,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Numero di risposte in inglese:"
+        android:textColor="@color/purple_700"
         android:textAlignment="center"
         android:textSize="20dp"></TextView>
 
@@ -116,7 +121,7 @@
         android:layout_marginVertical="20dp"
         android:paddingHorizontal="20dp"
         android:text="@string/question"
-        android:textSize="12dp"
+        android:textSize="16dp"
         android:textColor="@color/bluchiaro"
         android:textAlignment="center"></TextView>
 
